{{$NEXT}}

- Updated the mapping of Windows -> IANA time zones. Patch by David
  Pinkowitz. RT #10025.


1.76    2014-10-26

- When searching for the local timezone we now look at /etc/timezone before
  /etc/localtime. The former is a much quicker check if it exists. Patch by
  Karen Etheridge. PR #3.

- The tools/parse_olson script now supports parsing the etcetera and systemv
  files. This is *not* enabled by default as it would generate zones that
  conflict with existing links for Etc/UTC and others. Patch by Alfie John. PR
  #1.


1.75    2014-09-30

- This release is based on version 2014h of the Olson database. This release
  only includes historical changes.


1.74    2014-08-30

- This release is based on version 2014g of the Olson database. This release
  includes contemporary changes for Turks & Caicos.

- Fixed a bug when trying to get the local timezone by looking at
  /etc/sysconfig/clock. Patch by Alexey Molchanov. GitHub PR #2.


1.73    2014-08-06

- This release is based on version 2014f of the Olson database. This release
  includes contemporary changes for Russia and Australia.


1.72    2014-08-03

- Added support for getting the local time zone on Android. Patch from Brian
  Fraser. RT #97711.

- The primary repo for this distro is now on GitHub.


1.71    2014-06-21

- This release is based on version 2014e of the Olson database. This release
  includes contemporary changes for Egypt and Morocco.


1.70    2014-06-01

- Unset $ENV{TZ} in the t/04local.t test to avoid interference from
  the system. Reported by Mark Gardner. RT #96083.

- This release is based on version 2014d of the IANA database, but there are
  no data changes from 2014c.


1.69    2014-05-13

- Don't run tests for Unix on non-Unix boxes.


1.68    2014-05-13

- The last release was missing some test changes I made on another
  machine. Doh.


1.67    2014-05-13

- I accidentally skipped 1.66, don't read anything into the 0.02 version bump
  here.
