@@ -1,8 +1,10 @@
 use strict;
 use warnings;
 
-use File::Spec;
 use Test::More;
+
+use File::Spec;
+use Try::Tiny;
 
 use lib File::Spec->catdir( File::Spec->curdir, 't' );
 
@@ -10,7 +12,7 @@ BEGIN { require 'check_datetime_version.pl' }
 
 for my $name (
     qw( EST MST HST CET EET MET WET EST5EDT CST6CDT MST7MDT PST8PDT )) {
-    my $tz = eval { DateTime::TimeZone->new( name => $name ) };
+    my $tz = try { DateTime::TimeZone->new( name => $name ) };
     ok( $tz, "got a timezone for name => $name" );
 }
 
