@@ -3,6 +3,8 @@
 - Updated the mapping of Windows -> IANA time zones. Patch by David
   Pinkowitz. RT #10025.
 
+- Replaced Class::Load with Module::Runtime, and replaced eval with Try::Tiny.
+
 
 1.76    2014-10-26
 
